# hwp-mcp

./: .dockerignore  .env.hwpmcp.example  .gitattributes  .gitignore  .mailmap  .mcp.json.example  CHANGELOG.md  CHANGELOG_EN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.http  LICENSE  README.md  README_EN.md  THIRD_PARTY_LICENSES.md  docker-compose.dev.yml  docker-compose.hwpmcp.yml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml  full-renderer-sweep.yml  npm-publish.yml  release-binary.yml  render-diff.yml
bindings/: README.md
bindings/Native/: Cargo.toml
bindings/csharp/: RhwpNative.cs
bindings/swift/: Package.swift  README.md
docs/: text-ir-v2.md
examples/: build_issue_505_fixture.rs  diag_1139_para_shape.rs  diag_836.rs  diag_927_reflow.rs  dump_eqedit_raw.rs  dump_equation_records.rs  dump_footnote_inner.rs  dump_odd_header_1113.rs  dump_polygon_layer_json.rs  dump_polygon_transform.rs  dump_shape_para.rs  dump_table_ctrl_data.rs  hwpx_dump_empty.rs  hwpx_dump_text.rs  hwpx_hwp_ir_diff.rs  hwpx_roundtrip.rs  inspect_574.rs  inspect_595.rs  inspect_595_regression.rs  inspect_658_selection.rs  inspect_705.rs  inspect_pr601.rs  inspect_task671.rs  inspect_task671_v2.rs  inspect_task672.rs  pr599_png_gateway.rs  repro_1058_footnote_insert.rs  repro_1061_equation_save.rs  repro_1064_save.rs  repro_1113_round1.rs  repro_1113_save.rs  scan_cell_pagehide.rs
npm/: README.md
npm/editor/: README.md  index.d.ts  index.js  package.json
rhwp-chrome/: README.md  background.js  build.mjs  content-script.css  content-script.js  dev-tools-inject.js  manifest.json  options.html  options.js  package-lock.json  package.json  vite.config.ts
rhwp-chrome/sw/: download-interceptor.js  download-interceptor.test.mjs  fetch-security.test.mjs  message-router.js
rhwp-chrome/test/: index.html
rhwp-firefox/: PRIVACY.md  README.md  background.js  build.mjs  content-script.js  dev-tools-inject.js  manifest.json  options.js  package-lock.json  package.json  vite.config.ts
rhwp-firefox/sw/: context-menus.js  download-interceptor-common.js  download-interceptor.js  fetch-security.js  message-router.js  thumbnail-extractor.js
rhwp-firefox/test/: 02-data-hwp-protocol.html  06-security.html  index.html
rhwp-safari/: build.sh
rhwp-safari/src/: background.js  content-script.css  content-script.js  manifest.json  options.html  options.js
rhwp-safari/test/: test-hwp-link.html
rhwp-shared/security/: constants.js  file-signature.js  filename-sanitizer.js  security-log.js  sender-validator.js  url-validator.js
rhwp-shared/sw/: download-interceptor-common.js  download-interceptor-common.test.js
rhwp-studio/: .gitignore  cdp_screenshot.cjs  hwpctl-test.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rhwp-studio/e2e/: autosave-recovery.test.mjs  blogform.test.mjs  body-outside-click-fallback.test.mjs  command-palette.test.mjs  copy-paste.test.mjs  debug-pagination.test.mjs  debug-table-pos.test.mjs  debug-textbox.test.mjs  dialog-theme.test.mjs  drag-selection-autoscroll.test.mjs  drop-confirm.test.mjs  edit-pipeline.test.mjs  export-hwpx.test.mjs  (+44 more)
rhwp-vscode/: .vscodeignore  CHANGELOG.md  package-lock.json  package.json  publish.sh  tsconfig.json  tsconfig.webview.json
samples/: 143E433F503322BD33.hwp  2010-01-06.hwp  20250130-hongbo-no.hwp  20250130-hongbo.hwp  20250130-hongbo_saved.hwp  2026_oss_rst.hwp  21_언어_기출_편집가능본.hwp  253E164F57A1BC6934-empty.hwp  3-09월_교육_통합_2023.hwp  3-09월_교육_통합_2023.hwpx  3-10월_교육_통합_2022.hwp  3-10월_교육_통합_2022.hwpx  KTX.hwp  README.md  bitmap.hwp  biz_plan.hwp  calc-cell.hwp  draw-group.hwp  el-school-001.hwp  endnote-01.hwp  eq-002.hwp  eq-01.hwp  equation-lim.hwp  exam-kor-1p.hwp  exam-kor-2p.hwp  exam-kor-3p.hwp  exam-kor-4p.hwp  exam_eng.hwp  exam_math.hwp  exam_math_8.hwp  exam_math_no.hwp  exam_science.hwp  exam_social-p1.hwp  exam_social.hwp  field-01-memo.hwp  footnote-tbox-01.hwp  form-01.hwp  form-02.hwp  group-box.hwp  group-drawing-02.hwp  (+187 more)
saved/: 03-blank_hwpx.hwpx  blank_hwpx.hwpx  hwpx-01-saved.hwpx
scripts/: package-swift-xcframework.sh  prepare-npm.sh  renderer_baseline.py  renderer_baseline_manifest.json  svg_regression_diff.sh  task1274_visual_sweep.py  task1363_ssot_diff.py
src/: error.rs  lib.rs  main.rs  wasm_api.rs
template/: 111111.hwp  blank-batang-arial.hwp  blank-batang.hwp  blank-batangche.hwp  blank-dotum.hwp  blank-dotumche.hwp  blank-malgun.hwp  empty-step1-p.hwp  empty-step1_saved-a.hwp  empty-step1_saved.hwp  empty-step1_saved_add_ccmsb.hwp  empty-step2-p.hwp  empty-step2.hwp  empty-step2_saved_err.hwp  empty.hwp
tests/: bookmark_reload_regression.rs  diag_1042_2022.rs  diag_1042_2024_reverse.rs  diag_1042_cfb_check.rs  diag_1042_height_calc.rs  diag_1042_hwp3_vs_hwp5_paragraph.rs  diag_1042_hwp_summary.rs  diag_1042_normal_vs_abnormal.rs  diag_1042_pi162_attr1.rs  diag_1042_raw_binary.rs  diag_1042_table_row_height.rs  diag_1042_trailing.rs  diag_1042_used_breakdown.rs  diag_1042_variant_check.rs  diag_1042_version_check.rs  diag_1042_vpos_distribution.rs  exam_eng_multicolumn.rs  hit_test_leading_gap.rs  html_table_style_regression.rs  hwp_validate_test.rs  hwpx_form_roundtrip.rs  hwpx_roundtrip_baseline.rs  hwpx_roundtrip_integration.rs  hwpx_to_hwp_adapter.rs  ir_diff_summary_mode.rs  issue_1008_gradient.rs  issue_1017.rs  issue_1019.rs  issue_1028_hwpx_textbox_vertical.rs  issue_1035_alignment.rs  issue_1050_footnote_serialize.rs  issue_1052_footnote_in_textbox.rs  issue_1058_textbox_list_header.rs  issue_1061_equation_serialize.rs  issue_1067_shape_rotation.rs  issue_1070_tac_table_post_text_overflow.rs  issue_1071_tac_cursor_nav.rs  issue_1073_nested_table_split.rs  issue_1079_picture_pushdown_vpos.rs  issue_1082_endnote_multicolumn_drift.rs  (+114 more)
ttfs/: FONTS.md
typescript/: rhwp.d.ts
web/: app.js  char_shape_dialog.js  clipboard_test.html  editor.css  editor.html  editor.js  font_substitution.js  format_toolbar.js  https_server.py  index.html  rhwp.js  style.css  text_selection.js
(+565 files in other folders)
